# dua-backend

./: .gitignore  Cargo.toml  Makefile  README.md  parse_cargo.py  samconfig.toml  template.yaml
src/: encryption.rs  gemini.rs  lib.rs  ssm.rs  tts.rs  util.rs
src/database/: mod.rs  redis.rs  user.rs
