[package]
name = "ephelion_example"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size
opt-level = "z"
# Link Time Optimization
lto = true
# Strip symbols from binary
strip = true
# Reduce number of codegen units for better optimization
codegen-units = 1
# Panic abort instead of unwind to reduce binary size
panic = "abort"

[features]
default = []
# Development feature that enables all modules for IDE support
dev = ["ssm", "encryption", "redis_db", "user_db"]
ssm = ["aws-sdk-ssm"]
encryption = ["aes", "cbc", "scrypt", "hex"]
redis_db = []
user_db = []

[dependencies]
aws-config = "1.8.6"
aws-sdk-dynamodb = "1.93.0"
aws-sdk-ssm = { version = "1.93.0", optional = true }
aws-smithy-types = "1.3.2"
lambda_http = "0.17.0"
lambda_runtime = "0.14.4"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
aws_lambda_events = "0.18.0"
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
scrypt = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }
rand = "0.9.2"
thiserror = "2.0.17"

[dev-dependencies]
aws-smithy-http = "0.62.3"
aws-types = { version = "1.3.8" }
http = "1.3.1"


[[bin]]
name = "AuthorizerToken"
path = "src/bin/AuthorizerToken.rs"
required-features = ["encryption", "ssm", "redis_db"]
