[package]
name = "dua_backend"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[features]
default = []
dev = ["ssm", "gemini", "tts"]
ssm = ["aws-sdk-ssm"]
gemini = ["google-ai-rs"]
tts = ["reqwest", "base64"]

[dependencies]
aws-config = "1.8.6"
aws-sdk-ssm = { version = "1.93.0", optional = true }
aws-smithy-types = "1.3.2"
lambda_http = "0.17.0"
lambda_runtime = "0.14.4"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
aws_lambda_events = "0.18.0"
thiserror = "2.0.17"
http = "1.3.1"
google-ai-rs = { version = "0.3", features = ["serde"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
base64 = { version = "0.22", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dev-dependencies]
aws-smithy-http = "0.62.3"
aws-types = { version = "1.3.8" }
http = "1.3.1"

[[bin]]
name = "GenerateDua"
path = "src/bin/GenerateDua.rs"
required-features = ["gemini", "ssm"]

[[bin]]
name = "GenerateAudio"
path = "src/bin/GenerateAudio.rs"
required-features = ["tts", "ssm"]
